--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - cd gphoto.lrdevplugin
 - for i in *.lua; do luac -o $i $i; done
 - cd ..
-- zip -r gphoto.lrdevplugin.zip gphoto.lrdevplugin
+- zip -r lightroom-google-photo-plugin.zip gphoto.lrdevplugin
 deploy:
   provider: releases
   api_key:
