Added path to lua-ls config to gh workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,3 +26,4 @@ jobs:
         uses: mrcjkb/lua-typecheck-action@v0.1.2
         with:
           directories: google-photo.lrplugin
+          configpath: ".luarc.json"
